# nfa2dfa

./: Main.hs  Makefile  README.md  input2.txt  nfa2dfa.cabal
src/: Main.hs
src/NFA2DFA/: Algorithm.hs  Data.hs  Parse.hs
