name:                nfa2dfa
version:             0.1.0.0
synopsis:            Conversion of automata via subset construction
-- description:         
homepage:            https://github.com/RyanGlScott/nfa2dfa
license:             GPL-3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@ku.edu
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable nfa2dfa
  main-is:             Main.hs
  other-modules:       NFA2DFA.Algorithm
                       NFA2DFA.Data
                       NFA2DFA.Parse
  build-depends:       base >= 4 && < 4.8
                     , containers
                     , parsec
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall